[package]
name = "user-onboarding"
version = "0.3.766-dev"
license = "FSL-1.1-ALv2"
edition = "2024"

[package.metadata.cargo-machete]
ignored = ["es-entity"]

[features]
fail-on-warnings = []

[dependencies]
core-access = { path = "../../core/access" }

outbox = { path = "../../lib/outbox" }
job = { path = "../../lib/job" }
audit = { path = "../../lib/audit" }
kratos-admin = { path = "../../lib/kratos-admin" }

es-entity = { workspace = true, features = ["graphql"] }
serde = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
