[package]
name = "user-onboarding"

license = "FSL-1.1-ALv2"
edition = "2024"

[package.metadata.cargo-machete]
ignored = ["es-entity"]

[features]
fail-on-warnings = []

[dependencies]
core-access = { workspace = true }

outbox = { workspace = true }
job = { workspace = true }
keycloak-client = { workspace = true }

es-entity = { workspace = true, features = ["graphql"] }
serde = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
