[package]
name = "airflow"
description = "Connects to the Airflow API to talk to custom plugins defined in meltano/orchestration/airflow/plugins"
version = "0.3.771-dev"
license = "FSL-1.1-ALv2"
edition = "2024"

[features]

fail-on-warnings = []

[dependencies]

thiserror = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["url"]
