[package]
name = "authz"
version = "0.3.772-dev"
license = "FSL-1.1-ALv2"
edition = "2024"

[package.metadata.cargo-machete]
ignored = ["schemars"]

[features]

fail-on-warnings = []
test-dummy = []
json-schema = ["dep:schemars", "audit/json-schema"]

[dependencies]
audit = { workspace = true }

sqlx-adapter = { workspace = true }

async-trait = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
schemars = { workspace = true, optional = true }
